feat: enhance performance overlay with frame graph and draggable UI
- Add real-time frame time graph with min/avg/max statistics
- Implement draggable overlay functionality with cursor feedback
- Modernize UI with Material Design colors and improved typography
- Fix crash issues by throttling performance data updates
- Ensure FPS and frame time consistency
- Add proper error handling and validation
- Increase overlay size to accommodate new graph feature

Signed-off-by: Zephyron <zephyron@citron-emu.org>

--- a/src/citron/CMakeLists.txt
+++ b/src/citron/CMakeLists.txt
@@ -224,6 +224,8 @@ add_executable(citron
     util/overlay_dialog.cpp
     util/overlay_dialog.h
     util/overlay_dialog.ui
+    util/performance_overlay.cpp
+    util/performance_overlay.h
     util/sequence_dialog/sequence_dialog.cpp
     util/sequence_dialog/sequence_dialog.h
     util/url_request_interceptor.cpp
