--- a/src/citron/CMakeLists.txt
+++ b/src/citron/CMakeLists.txt
@@ -526,9 +526,11 @@ endif()
 
 if (MSVC)
     include(CopyCitronSDLDeps)
-    include(CopyCitronFFmpegDeps)
     copy_citron_SDL_deps(citron)
-    copy_citron_FFmpeg_deps(citron)
+    if(CITRON_USE_BUNDLED_FFMPEG)
+        include(CopyCitronFFmpegDeps)
+        copy_citron_FFmpeg_deps(citron)
+    endif()
 endif()
 
 if (NOT APPLE AND ENABLE_OPENGL)
