audio_core: Add Audio Renderer REV12 and REV13 support
Implements support for Audio Renderer revisions 12 and 13, adding:
- REV12: Splitter biquad filter support with fixed-point coefficients
- REV13: Explicit splitter previous volume reset and compressor statistics

Signed-off-by: Zephyron <zephyron@citron-emu.org>

--- a/src/audio_core/CMakeLists.txt
+++ b/src/audio_core/CMakeLists.txt
@@ -101,6 +101,10 @@ add_library(audio_core STATIC
     renderer/command/effect/limiter.h
     renderer/command/effect/multi_tap_biquad_filter.cpp
     renderer/command/effect/multi_tap_biquad_filter.h
+    renderer/command/effect/biquad_filter_and_mix.cpp
+    renderer/command/effect/biquad_filter_and_mix.h
+    renderer/command/effect/multi_tap_biquad_filter_and_mix.cpp
+    renderer/command/effect/multi_tap_biquad_filter_and_mix.h
     renderer/command/effect/reverb.cpp
     renderer/command/effect/reverb.h
     renderer/command/mix/clear_mix.cpp
