fix(ui): Add SVG support and fallback icons for Surprise Me button
Added Qt6::Svg to CMake configuration and implemented fallback
icon chain.

Signed-off-by: Zephyron <zephyron@citron-emu.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -567,7 +567,7 @@ endif()
 
 function(set_citron_qt_components)
 # Best practice is to ask for all components at once, so they are from the same version
-set(CITRON_QT_COMPONENTS2 Core Widgets Concurrent)
+set(CITRON_QT_COMPONENTS2 Core Widgets Concurrent Svg)
 if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 list(APPEND CITRON_QT_COMPONENTS2 DBus GuiPrivate)
 endif()
